# garlicconfig-core

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  init.sh  requirements.txt
.circleci/: config.yml  install_mingw.ps1
.github/workflows/: pr.yaml
docker/: Dockerfile
include/: encoding.h  exceptions.h  garlicconfig.h  layer.h  repository.h
include/encoding/: json.h
scripts/: build.sh
src/: hello.cpp  layer.cpp  repository.cpp
src/encoding/: json.cpp
tests/: CMakeLists.txt  main.cpp  test_layer.cpp  test_repositories.cpp
